# paideia-as

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  STATUS.md  deny.toml  test_output.txt
crates/paideia-as/: Cargo.toml
crates/paideia-as-ast/: Cargo.toml
crates/paideia-as-ast/src/: arena.rs  exprs.rs  items.rs  lib.rs  macros.rs  modules.rs  node_id.rs  patterns.rs  pretty.rs  reflect.rs  stmts.rs  types.rs  visit.rs
crates/paideia-as-ast/tests/: expr_integration.rs  items_integration.rs
crates/paideia-as-diagnostics/: Cargo.toml  build.rs  catalog.toml
crates/paideia-as-diagnostics/src/: builder.rs  catalog.rs  code.rs  diagnostic.rs  extended.rs  lib.rs  render_human.rs  sarif.rs  sink.rs  source_map.rs  span.rs
crates/paideia-as-diagnostics/tests/: m0307_retired.rs  opt_codes_present.rs  proptest_codes.rs  render_human.rs  sarif.rs  sink.rs
crates/paideia-as-doc/: Cargo.toml
crates/paideia-as-doc/src/: lib.rs
crates/paideia-as-dwarf/: Cargo.toml
crates/paideia-as-dwarf/src/: info.rs  lib.rs  line.rs  sections.rs  vendor.rs
crates/paideia-as-dwarf/tests/: gdb_smoke.rs
crates/paideia-as-effects/: Cargo.toml
crates/paideia-as-effects/src/: capabilities.rs  intern.rs  lib.rs  registry.rs  row.rs  unify.rs
crates/paideia-as-effects/tests/: proptest_unify.rs
crates/paideia-as-elaborator/: Cargo.toml
crates/paideia-as-elaborator/src/: borrow_walker.rs  branch_merge.rs  cap_infer.rs  cap_walker.rs  capture.rs  check_bounds.rs  check_coherence.rs  check_expr.rs  check_handler.rs  check_lambda.rs  check_linearity.rs  check_match.rs  check_ordered.rs  check_pattern.rs  check_pure.rs  derive.rs  effect_infer.rs  effect_unify.rs  effect_walker.rs  elab_builtin.rs  emit_walker.rs  env.rs  file_module.rs  functor_apply.rs  hygiene.rs  incremental.rs  intrinsics.rs  kind.rs  last_use.rs  lib.rs  lifetime_walker.rs  linearity_ctx.rs  local_binding_table.rs  lower.rs  macro_expand.rs  macro_match.rs  modules.rs  mutation_walker.rs  name_resolution.rs  name_resolution_walker.rs  (+17 more)
crates/paideia-as-elaborator/tests/: byte_offset_tests.rs  emit_walker_tests.rs  lower_unsafe_tests.rs  string_lit_emit.rs  unsafe_walker_tests.rs
crates/paideia-as-emitter-elf/: Cargo.toml
crates/paideia-as-emitter-elf/src/: encode.rs  handler.rs  lib.rs  lower.rs  notes.rs  prologue.rs  pvh_note.rs  relocs.rs  sections.rs  symtab.rs  sysv_bridge.rs  writer.rs
crates/paideia-as-emitter-elf/tests/: encoder_facade.rs  indexed_load_store_smoke.rs  pvh_note.rs  sdm_vectors.rs
crates/paideia-as-emitter-pax/: Cargo.toml
crates/paideia-as-emitter-pax/src/: audit.rs  caps.rs  effects.rs  functors.rs  hash.rs  header.rs  imports.rs  lib.rs  opt_passes.rs  relocs.rs  section.rs  sign.rs  symtab.rs
crates/paideia-as-emitter-pax/tests/: m2_003_offset_mapping.rs
crates/paideia-as-emitter-pe/: Cargo.toml
crates/paideia-as-emitter-pe/src/: header.rs  imports.rs  lib.rs  reloc.rs  section.rs  text_emitter.rs  uefi_thunk.rs
crates/paideia-as-encoder/: Cargo.toml
crates/paideia-as-encoder/src/: dispatch.rs  encode.rs  encode_and_or_xor.rs  encode_imul.rs  encode_instruction.rs  lib.rs
crates/paideia-as-encoder/tests/: bitwise_arith_real.rs  imul_real.rs  lea_mode32.rs  lgdt_abs32.rs  ljmp_two_operand.rs  mov_abs32.rs  mov_dr_dispatch.rs  mov_narrow.rs  or_r32_imm32_signbit.rs  or_r32_imm_mode32.rs  or_r64_imm.rs  reloc_offset_4_sites.rs  supervisor_mode_agnostic.rs  symbol_addend_encode.rs  v15_survey_witness.rs
crates/paideia-as-ir/: Cargo.toml
crates/paideia-as-ir/src/: addr_of.rs  anf.rs  arena.rs  binding_name.rs  borrow.rs  call_meta.rs  cast_meta.rs  constant_pool.rs  data.rs  effect_rewrite.rs  enum_layout.rs  handler_value.rs  instruction.rs  lambda_param.rs  let_meta.rs  lib.rs  literal_bytes.rs  literal_value.rs  load_store.rs  loop_meta.rs  modules.rs  monomorphisation.rs  node.rs  pretty.rs  record_layout.rs  section_attr.rs  string_literal.rs  symbol.rs  walker.rs  walker_ctx.rs
crates/paideia-as-linker/: Cargo.toml
crates/paideia-as-linker/src/: emit.rs  lib.rs  parse.rs  relocate.rs  resolve.rs
crates/paideia-as-parser/: Cargo.toml
crates/paideia-as-parser/src/: cursor.rs  lib.rs  modules.rs  parse_action.rs  parse_control.rs  parse_expr.rs  parse_handler.rs  parse_item.rs  parse_lambda.rs  parse_macro.rs  parse_match.rs  parse_memref.rs  parse_pattern.rs  parse_postfix.rs  parse_prefix.rs  parse_primary.rs  parse_stmt.rs  parse_type.rs  parse_unsafe.rs  parser.rs  precedence.rs  quote.rs
crates/paideia-as-parser/tests/: empty_fn_args.rs  example_files.rs  inner_attr_bits.rs  ljmp_instruction.rs  snapshots_modules.rs
crates/paideia-as-types/: Cargo.toml
crates/paideia-as-types/src/: cap_set.rs  intern.rs  kind_inference.rs  kinds.rs  layout.rs  lib.rs  regions.rs  subst.rs  types.rs  unify.rs
crates/paideia-as-types/tests/: proptest_unify.rs
crates/paideia-as/src/: cli.rs  cmd_build.rs  cmd_check.rs  cmd_doc.rs  cmd_dump_ast.rs  cmd_fmt.rs  cmd_test.rs  det.rs  main.rs  resolve_var_operands.rs
crates/paideia-as/tests/: abi_pdx.rs  array_element_widths.rs  boot_observable_smoke.rs  boot_orchestration_smoke.rs  boot_orchestration_v2.rs  bss_emission.rs  build_emit_bss_reloc.rs  build_emit_call_sym.rs  build_emit_cap_smoke.rs  build_emit_control_flow_corpus.rs  build_emit_encoder_strict.rs  build_emit_field_read.rs  build_emit_label_patches.rs  build_emit_pa10_006i_imm.rs  build_emit_pa10_006k_ljmp.rs  build_emit_pa10_006l_inout.rs  build_emit_smoke.rs  (+38 more)
crates/paideia-lsp/: Cargo.toml
crates/paideia-pq-sign/: Cargo.toml
tests/e2e/: Cargo.toml
tests/effects-corpus/: Cargo.toml  README.md
tests/end-to-end/: Cargo.toml  README.md
tests/ir-payload/: Cargo.toml
tests/linearity-regression/: Cargo.toml  README.md
tests/lsp-harness/: Cargo.toml  README.md
tests/modules-multifile/: Cargo.toml
tests/opt-regression/: Cargo.toml
tests/pax-load-smoke/: Cargo.toml  README.md
tests/pq-corpus/: Cargo.toml  ML_DSA_ACVP_STATUS.md  README.md
tests/reflection-corpus/: Cargo.toml  README.md
tests/stdlib-smoke/: Cargo.toml
(+1200 files in other folders)
