[workspace]
resolver = "2"
members = [
    "crates/paideia-as",
    "crates/paideia-as-lexer",
    "crates/paideia-as-parser",
    "crates/paideia-as-ast",
    "crates/paideia-as-types",
    "crates/paideia-as-effects",
    "crates/paideia-as-elaborator",
    "crates/paideia-as-ir",
    "crates/paideia-as-encoder",
    "crates/paideia-as-emitter-elf",
    "crates/paideia-as-emitter-pax",
    "crates/paideia-as-emitter-pe",
    "crates/paideia-as-dwarf",
    "crates/paideia-as-diagnostics",
    "crates/paideia-as-linker",
    "crates/paideia-lsp",
    "crates/paideia-fmt",
    "crates/paideia-pq-sign",
    "crates/paideia-stdlib",
    "tests/e2e",
    "tests/end-to-end",
    "tests/effects-corpus",
    "tests/ir-payload",
    "tests/linearity-regression",
    "tests/lsp-harness",
    "tests/migration-smoke/cap",
    "tests/modules-multifile",
    "tests/opt-regression",
    "tests/opt-regression/align",
    "tests/opt-regression/branch-hint",
    "tests/opt-regression/dse",
    "tests/opt-regression/encode-tight",
    "tests/opt-regression/macro-fusion",
    "tests/opt-regression/peephole",
    "tests/opt-regression/pool-constants",
    "tests/opt-regression/schedule",
    "tests/opt-regression/tailcall",
    "tests/opt-regression/unroll",
    "tests/reflection-corpus",
    "tests/pax-load-smoke",
    "tests/pq-corpus",
    "tests/stdlib-smoke",
    "tests/uefi-smoke",
    "tests/cross-build",
    "tools/ddc",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Santiago Núñez-Corrales <snunezcr@gmail.com>"]
repository = "https://github.com/paideia-os/paideia-as"
homepage = "https://paideia-os.org"

[workspace.dependencies]
# Diagnostics
miette = "7"
thiserror = "2"
ariadne = "0.5"
static_assertions = "1"
jsonschema = "0.18"
smallvec = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Parser tooling
chumsky = "0.10"
logos = "0.15"
unicode-ident = "1"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Object file emission
object = { version = "0.36", features = ["all"] }
gimli = { version = "0.32", default-features = false, features = ["write", "std"] }

# Cryptography (for PAX signing per PQ trust root design)
ed25519-dalek = "2"
sha3 = "0.10"
blake3 = "1"
ml-dsa = "0.1"
rand_core = "0.6"
signature = "2"

# Testing
insta = "1"
proptest = "1"
iced-x86 = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
