[package]
name = "paideia-as-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_ast"

[dependencies]
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
smallvec = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
