[package]
name = "paideia-as-diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_diagnostics"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
toml = { workspace = true }

[build-dependencies]
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
