[package]
name = "paideia-as-dwarf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_dwarf"

[dependencies]
gimli = { workspace = true }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-ir = { path = "../paideia-as-ir" }
