[package]
name = "paideia-as-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_effects"

[dependencies]
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-ir = { path = "../paideia-as-ir" }

[dev-dependencies]
proptest = { workspace = true }
