[package]
name = "paideia-as-elaborator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_elaborator"

[dependencies]
paideia-as-ast = { path = "../paideia-as-ast" }
paideia-as-ir = { path = "../paideia-as-ir" }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-types = { path = "../paideia-as-types" }
paideia-as-effects = { path = "../paideia-as-effects" }
blake3 = { workspace = true }
