[package]
name = "paideia-as-emitter-elf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_emitter_elf"

[dependencies]
object = { workspace = true }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-encoder = { path = "../paideia-as-encoder" }
paideia-as-ir = { path = "../paideia-as-ir" }
serde_json = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
iced-x86 = { workspace = true }
