[package]
name = "paideia-as-emitter-pax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_emitter_pax"

[dependencies]
static_assertions = { workspace = true }
blake3 = { workspace = true }
paideia-as-ir = { path = "../paideia-as-ir" }
