[package]
name = "paideia-as-emitter-pe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_emitter_pe"

[dependencies]
paideia-as-encoder = { path = "../paideia-as-encoder" }
paideia-as-ir = { path = "../paideia-as-ir" }
smallvec = { workspace = true }
static_assertions = { workspace = true }
