[package]
name = "paideia-as-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_ir"

[dependencies]
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
serde = { workspace = true }
static_assertions = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
