[package]
name = "paideia-as-linker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_linker"

[dependencies]
paideia-as-emitter-pax = { path = "../paideia-as-emitter-pax" }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
