[package]
name = "paideia-as-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_parser"

[dependencies]
paideia-as-ast = { path = "../paideia-as-ast" }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-lexer = { path = "../paideia-as-lexer" }
