[package]
name = "paideia-as-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_as_types"

[dependencies]
paideia-as-ir = { path = "../paideia-as-ir" }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-ast = { path = "../paideia-as-ast" }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
