[package]
name = "paideia-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_lsp"

[[bin]]
name = "paideia-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
lru = "0.12"
paideia-as-lexer = { path = "../paideia-as-lexer" }
paideia-as-parser = { path = "../paideia-as-parser" }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-ast = { path = "../paideia-as-ast" }

[dev-dependencies]
tempfile = { workspace = true }
