[package]
name = "paideia-pq-sign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_pq_sign"

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ml-dsa        = { workspace = true, features = ["rand_core"] }
rand_core     = { workspace = true }
signature     = { workspace = true }

[dev-dependencies]
hex = "0.4"
rand_core = { workspace = true, features = ["getrandom"] }
