[package]
name = "paideia-pq-sign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "paideia_pq_sign"

[[bin]]
name = "paideia-pq-sign"
path = "src/bin/cli.rs"

[dependencies]
argon2        = "0.5"
blake3        = { workspace = true }
chacha20poly1305 = "0.10"
cryptoki      = "0.7"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex           = "0.4"
ml-dsa        = { workspace = true, features = ["rand_core"] }
rand_core     = { workspace = true }
rand_chacha   = "0.3"
signature     = { workspace = true }
thiserror     = { workspace = true }
toml          = { workspace = true }
paideia-as-diagnostics = { path = "../paideia-as-diagnostics" }
paideia-as-emitter-pax = { path = "../paideia-as-emitter-pax" }

[dev-dependencies]
hex = "0.4"
rand_core = { workspace = true, features = ["getrandom"] }
tempfile = "3"
paideia-as-emitter-pax = { path = "../paideia-as-emitter-pax" }
