[package]
name = "paideia-modules-multifile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# This crate is *only* a test harness — it contains no library code or
# binaries, just the integration tests in `tests/runner.rs` that walk
# the corpus directory and validate file-to-module mapping diagnostics
# (M-codes: M0305, M0306, M0313).

[lib]
path = "src/lib.rs"

[dependencies]
