[package]
name = "pax-load-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
paideia-as-emitter-pax = { path = "../../crates/paideia-as-emitter-pax" }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
