[package]
name = "pq-corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
paideia-pq-sign = { path = "../../crates/paideia-pq-sign" }
paideia-as-emitter-pax = { path = "../../crates/paideia-as-emitter-pax" }
paideia-as-diagnostics = { path = "../../crates/paideia-as-diagnostics" }
blake3 = { workspace = true }
rand_chacha = "0.3"

[dev-dependencies]
tempfile = "3"
rand_core = { workspace = true, features = ["getrandom"] }
