[package]
name = "paideia-reflection-corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# This crate is *only* a test harness — it contains no library code or
# binaries, just the integration tests in `tests/runner.rs` that walk
# the accept/ and reject/ corpus directories and validate M-codes
# (reflection-relevant: M0308/M0309/M0311/M0312).

[lib]
path = "src/lib.rs"

[dependencies]
